[package]
name = "mmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3.3"
tokio = { version = "1.20.1", default-features = false, features = ["macros", "rt-multi-thread"] }
matrix-sdk = {version = "0.4.1", default-features = false, features = ["encryption", "rustls-tls"]}
matrix-sdk-base = {version = "0.4.1", default-features = false, features = ["encryption"]}
